Fixed html serving

--- a/src/main/resources/pages/index.html
+++ b/src/main/resources/pages/index.html
@@ -231,7 +231,7 @@
             </div>
         </div>
 
-        <a href="pages/stats.html"><div class="overlay_right">
+        <a href="/stats"><div class="overlay_right">
             <div class="text">Stats: Search and view stats of your favorite players</div>
         </div></a>
     </div>
